--- a/shop/package.json
+++ b/shop/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@heroicons/react": "^1.0.6",
     "@tailwindcss/forms": "^0.5.0",
     "@testing-library/jest-dom": "^5.16.4",
